[gd_scene load_steps=4 format=3 uid="uid://c3ru4hdnuaj3n"]

[ext_resource type="Script" path="res://DialogueStuff/DialogueBalloon1.gd" id="1_tg248"]
[ext_resource type="Texture2D" uid="uid://jrqepmxi1da1" path="res://PlaceholdersDeleteMe/Basic_GUI_Bundle/ButtonsIcons/IconButton_Small_Orange_Circle.png" id="2_pc483"]
[ext_resource type="Texture2D" uid="uid://dctsshslipxbw" path="res://PlaceholdersDeleteMe/Basic_GUI_Bundle/ButtonsIcons/IconButton_Small_Background_Square.png" id="2_rnfi7"]

[node name="DialogPop" type="CanvasLayer"]
script = ExtResource("1_tg248")

[node name="D1" type="Node2D" parent="."]

[node name="Container" type="Control" parent="D1"]
custom_minimum_size = Vector2(980, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 483.0
offset_top = 694.0
offset_right = 1479.0
offset_bottom = 1041.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="D1/Container"]
custom_minimum_size = Vector2(1000, 350)
layout_mode = 2
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_rnfi7")
patch_margin_left = 90
patch_margin_top = 90
patch_margin_right = 90
patch_margin_bottom = 90

[node name="MarginContainer" type="MarginContainer" parent="D1/Container"]
layout_mode = 2
offset_right = 1040.0
offset_bottom = 342.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="D1/Container/MarginContainer"]
layout_direction = 1
layout_mode = 2

[node name="TextCol" type="VBoxContainer" parent="D1/Container/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(900, 250)
layout_mode = 2
theme_override_constants/separation = 50

[node name="KoreanSentence" type="FlowContainer" parent="D1/Container/MarginContainer/HBoxContainer/TextCol"]
unique_name_in_owner = true
custom_minimum_size = Vector2(900, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 12

[node name="KoreanText" type="RichTextLabel" parent="D1/Container/MarginContainer/HBoxContainer/TextCol/KoreanSentence"]
unique_name_in_owner = true
custom_minimum_size = Vector2(900, 150)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Here is where there will be Korean text."
fit_content = true

[node name="EnglishText" type="RichTextLabel" parent="D1/Container/MarginContainer/HBoxContainer/TextCol"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/default_color = Color(0.633757, 0.633757, 0.633757, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Here is where there will be English text."
fit_content = true

[node name="ButtonCol" type="VBoxContainer" parent="D1/Container/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="AudioRepeat" type="TextureButton" parent="D1/Container/MarginContainer/HBoxContainer/ButtonCol"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_pc483")
ignore_texture_size = true
stretch_mode = 4

[node name="EnglishToggle" type="TextureButton" parent="D1/Container/MarginContainer/HBoxContainer/ButtonCol"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_pc483")
ignore_texture_size = true
stretch_mode = 4

[node name="Continue" type="TextureButton" parent="D1/Container"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 20.0
offset_top = 199.0
offset_right = 920.0
offset_bottom = 342.0
mouse_filter = 1

[node name="Choices" type="Node2D" parent="."]

[node name="Container" type="Control" parent="Choices"]
layout_mode = 3
anchors_preset = 0
offset_left = 533.0
offset_top = 205.0
offset_right = 1428.0
offset_bottom = 680.0

[node name="ChoiceContainer" type="VBoxContainer" parent="Choices/Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 466.0
grow_horizontal = 2
theme_override_constants/separation = 8
